; ModuleID = '/home/carl/AnghaBench/linux/drivers/platform/x86/extr_samsung-laptop.c_write_lid_handling.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/platform/x86/extr_samsung-laptop.c_write_lid_handling.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.samsung_laptop = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.sabi_commands }
%struct.sabi_commands = type { i32 }
%struct.sabi_data = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.samsung_laptop*, i32)* @write_lid_handling to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_lid_handling(%struct.samsung_laptop* %0, i32 %1) #0 {
  %3 = alloca %struct.samsung_laptop*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.sabi_commands*, align 8
  %6 = alloca %struct.sabi_data, align 8
  store %struct.samsung_laptop* %0, %struct.samsung_laptop** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.samsung_laptop*, %struct.samsung_laptop** %3, align 8
  %8 = getelementptr inbounds %struct.samsung_laptop, %struct.samsung_laptop* %7, i32 0, i32 0
  %9 = load %struct.TYPE_2__*, %struct.TYPE_2__** %8, align 8
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  store %struct.sabi_commands* %10, %struct.sabi_commands** %5, align 8
  %11 = call i32 @memset(%struct.sabi_data* %6, i32 0, i32 8)
  %12 = load i32, i32* %4, align 4
  %13 = or i32 128, %12
  %14 = getelementptr inbounds %struct.sabi_data, %struct.sabi_data* %6, i32 0, i32 0
  %15 = load i32*, i32** %14, align 8
  %16 = getelementptr inbounds i32, i32* %15, i64 0
  store i32 %13, i32* %16, align 4
  %17 = load %struct.samsung_laptop*, %struct.samsung_laptop** %3, align 8
  %18 = load %struct.sabi_commands*, %struct.sabi_commands** %5, align 8
  %19 = getelementptr inbounds %struct.sabi_commands, %struct.sabi_commands* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = call i32 @sabi_command(%struct.samsung_laptop* %17, i32 %20, %struct.sabi_data* %6, i32* null)
  ret i32 %21
}

declare dso_local i32 @memset(%struct.sabi_data*, i32, i32) #1

declare dso_local i32 @sabi_command(%struct.samsung_laptop*, i32, %struct.sabi_data*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
